Fix bugs - Previously, the click event on speaker icon doesn't work. The reason was the sound div was overlaid by other elements, making it unclickable. The issue got fixed by setting z-index to 10.

--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@ header {
 	position: absolute;
 	top: 25px;
 	right: 45px;
-	pointer-events: auto;
-	cursor: pointer; /* not working */
+	cursor: pointer; 
+	z-index: 10;
 }
 
 #timer {
